--- a/package.json
+++ b/package.json
@@ -31,14 +31,13 @@
     "gray-matter": "^4.0.3",
     "i18next": "^25.6.0",
     "lucide-react": "^0.548.0",
-    "next": "14.0.4",
-    "next-i18next": "^15.2.0",
+    "next": "^14.2.33",
     "next-seo": "^6.4.0",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.7",
     "postcss": "^8.4.32",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.2",
     "react-i18next": "^16.2.1",
     "react-markdown": "^10.1.0",
@@ -50,6 +49,6 @@
   "devDependencies": {
     "@types/nodemailer": "^6.4.14",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "^14.2.33"
   }
 }
