ðŸš€ LLEDO Industries - Version complÃ¨te avec auth, systÃ¨me avis clients, mobile ultra-optimisÃ© iOS/Android et blog SEO optimisÃ©

--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,12 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env
 .env*.local
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -35,6 +39,21 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# contentlayer
+# IDE
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.swp
+*.swo
+*~
+
+# OS
+Thumbs.db
+.DS_Store
+
+# Contentlayer
 .contentlayer
 
+# Cache
+.cache
+.turbo
