feat: responsive design, admin interface, deployment ready

--- a/env.example
+++ b/env.example
@@ -3,21 +3,55 @@
 # URL du site (production)
 NEXT_PUBLIC_SITE_URL=https://lledo-industries.com
 
-# Configuration SMTP pour le formulaire de contact
+# ===========================================
+# DATABASE (PostgreSQL - Supabase/Neon)
+# ===========================================
+DATABASE_URL="postgresql://user:password@host:5432/database?schema=public"
+
+# ===========================================
+# AUTHENTIFICATION (NextAuth.js)
+# ===========================================
+# Générer avec: openssl rand -base64 32
+AUTH_SECRET="your-super-secret-key-min-32-chars"
+NEXTAUTH_URL=http://localhost:3000
+
+# ===========================================
+# ADMIN SEED (compte administrateur initial)
+# ===========================================
+ADMIN_EMAIL=admin@lledo-industries.com
+ADMIN_PASSWORD=Admin123!
+
+# ===========================================
+# SMTP (envoi d'emails)
+# ===========================================
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
 SMTP_USER=your-email@example.com
 SMTP_PASS=your-password
 SMTP_FROM=noreply@lledo-industries.com
-CONTACT_EMAIL=contact@lledo-industries.com
+CONTACT_EMAIL=contact@mpeb13.com
 
-# Configuration analytics (optionnel)
+# ===========================================
+# STOCKAGE (optionnel - pour uploads en prod)
+# ===========================================
+# Supabase Storage
+# SUPABASE_URL=https://your-project.supabase.co
+# SUPABASE_ANON_KEY=your-anon-key
+# SUPABASE_SERVICE_KEY=your-service-key
+
+# ===========================================
+# ANALYTICS (optionnel)
+# ===========================================
 NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
 NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
 
-# Configuration Sentry (optionnel)
+# ===========================================
+# SENTRY (optionnel)
+# ===========================================
 SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
 
-# Configuration de développement
+# ===========================================
+# ENVIRONNEMENT
+# ===========================================
 NODE_ENV=development
 NEXT_PUBLIC_APP_ENV=development
