--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-hook-form": "^7.48.2",
     "react-i18next": "^16.2.1",
     "react-markdown": "^10.1.0",
+    "resend": "^6.9.1",
     "sharp": "^0.33.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3",
