feat(i18n): implement strict i18n strategy - Add useStrictTranslation hook for missing key detection - Configure i18next to block silent fallbacks in dev - Add validation script (npm run i18n:validate) - Add type generation script (npm run i18n:types) - Add API endpoint for logging missing keys - Configure ESLint jsx-no-literals rule - Add comprehensive documentation

--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "dev:fresh": "powershell -Command \"Stop-Process -Name node -Force -ErrorAction SilentlyContinue; Start-Sleep -Seconds 1; npm run dev\"",
     "dev:kill": "powershell -Command \"Stop-Process -Name node -Force -ErrorAction SilentlyContinue\"",
-    "build": "prisma generate && next build",
+    "build": "npm run i18n:validate && prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
+    "i18n:validate": "npx tsx scripts/validate-i18n.ts",
+    "i18n:types": "npx tsx scripts/generate-i18n-types.ts",
+    "i18n:check": "npm run i18n:validate && npm run i18n:types",
     "type-check": "tsc --noEmit",
     "postbuild": "next-sitemap",
     "translate": "node scripts/translate.js",
