feat(i18n): système anti-oubli complet avec validation stricte
- Ajout fichiers de traduction unifiés (fr/en/es/pt-br/ar.json) - 400 clés
- Hook useStrictTranslation avec mode fail en production
- Script i18n-strict-validate.ts pour validation build-time
- ESLint renforcé pour détecter textes hardcodés
- Composant TranslationGuard pour debug visuel
- Checklist de validation I18N-CHECKLIST.md
- Scripts npm: i18n:strict, i18n:check, lint:i18n
- Audit et correction des traductions existantes

--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "dev": "next dev",
     "dev:fresh": "powershell -Command \"Stop-Process -Name node -Force -ErrorAction SilentlyContinue; Start-Sleep -Seconds 1; npm run dev\"",
     "dev:kill": "powershell -Command \"Stop-Process -Name node -Force -ErrorAction SilentlyContinue\"",
-    "build": "npm run i18n:validate && prisma generate && next build",
+    "build": "npm run i18n:strict && prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:i18n": "eslint src --ext .tsx,.ts --rule 'react/jsx-no-literals: error'",
     "i18n:validate": "npx tsx scripts/validate-i18n.ts",
+    "i18n:strict": "npx tsx scripts/i18n-strict-validate.ts",
+    "i18n:strict:fix": "npx tsx scripts/i18n-strict-validate.ts --fix",
     "i18n:types": "npx tsx scripts/generate-i18n-types.ts",
-    "i18n:check": "npm run i18n:validate && npm run i18n:types",
+    "i18n:check": "npm run i18n:strict && npm run lint:i18n",
+    "i18n:report": "npm run i18n:strict:fix",
+    "prebuild": "npm run i18n:strict",
     "type-check": "tsc --noEmit",
     "postbuild": "next-sitemap",
     "translate": "node scripts/translate.js",
