--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.10.5",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vercel/analytics": "^1.1.1",
@@ -50,14 +52,17 @@
     "framer-motion": "^10.16.16",
     "gray-matter": "^4.0.3",
     "i18next": "^25.6.0",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.548.0",
     "next": "^14.2.33",
     "next-auth": "^5.0.0-beta.30",
     "next-seo": "^6.4.0",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^7.0.7",
+    "otplib": "^13.2.1",
     "postcss": "^8.4.32",
     "prisma": "^6.19.2",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.2",
