--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^6.19.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
@@ -69,8 +71,10 @@
     "resend": "^6.9.1",
     "sharp": "^0.33.1",
     "tailwindcss": "^3.4.0",
+    "three": "^0.182.0",
     "typescript": "^5.3.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
