--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "otplib": "^13.2.1",
     "postcss": "^8.4.32",
     "prisma": "^6.19.2",
+    "puppeteer": "^24.37.5",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
