--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@google/model-viewer": "^4.1.0",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^6.19.2",
     "@react-three/drei": "^10.7.7",
