--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/blob": "^2.3.0",
     "autoprefixer": "^10.4.16",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.0.0",
